<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.home.ArticleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_sampah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/sampahOrganik"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tv_artikelSampah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/artikelSampahOrganik"
                app:layout_constraintTop_toBottomOf="@id/tv_sampah"/>
            <TextView
                android:id="@+id/tv_artikelSampah1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/artikelSampahOrganik1"
                app:layout_constraintTop_toBottomOf="@id/tv_artikelSampah"/>

            <TextView
                android:id="@+id/tv_artikelSampah2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/artikelSampahOrganik2"
                app:layout_constraintTop_toBottomOf="@id/tv_artikelSampah1"/>

            <TextView
                android:id="@+id/tv_sampahNonOrganik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/sampahNonOrganik"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_artikelSampah2"/>
            <TextView
                android:id="@+id/tv_artikelSampahNonOrganik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/artikelSampahNonOrganik"
                app:layout_constraintTop_toBottomOf="@id/tv_sampahNonOrganik"/>
            <TextView
                android:id="@+id/tv_artikelSampahNonOrganik1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/artikelSampahNonOrganik1"
                app:layout_constraintTop_toBottomOf="@id/tv_artikelSampahNonOrganik"/>
            <TextView
                android:id="@+id/tv_artikelSampahNonOrganik2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/artikelSampahNonOrganik2"
                app:layout_constraintTop_toBottomOf="@id/tv_artikelSampahNonOrganik1"/>
            <TextView
                android:id="@+id/tv_artikelSampahNonOrganik3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/artikelSampahNonOrganik3"
                app:layout_constraintTop_toBottomOf="@id/tv_artikelSampahNonOrganik2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>