<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".view.home.HomeFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="-370dp"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="23dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="-340dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="340dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/baseline_settings_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point_tv"
            android:textSize="18dp"
            android:textStyle="normal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="-300dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/result_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_p"
            android:textSize="18dp"
            android:textStyle="normal"
            android:layout_marginStart="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="-300dp"
            android:layout_gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_gofood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/gofood_img"
                android:layout_width="380dp"
                android:layout_height="165dp"
                android:src="@drawable/gofood" />

            <TextView
                android:id="@+id/vcr_gofood"
                android:layout_width="380dp"
                android:layout_height="65dp"
                android:layout_marginTop="100dp"
                android:background="@color/blue"
                android:gravity="center_vertical"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:alpha="0.9"
                android:text="@string/vcr_gofood"
                android:textColorHint="@color/black"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/req_gofood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="180dp"
                android:textStyle="normal"
                android:text="@string/req_gofood"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_redeem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="170dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="270dp"
                android:backgroundTint="@color/blue"
                android:text="@string/redeem"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_indomaret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="385dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/indomaret_img"
                android:layout_width="380dp"
                android:layout_height="165dp"
                android:src="@drawable/indomaret" />

            <TextView
                android:id="@+id/vcr_indomaret"
                android:layout_width="380dp"
                android:layout_height="65dp"
                android:layout_marginTop="100dp"
                android:background="@color/blue"
                android:gravity="center_vertical"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:alpha="0.9"
                android:text="@string/vcr_indomaret"
                android:textColorHint="@color/black"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/req_indomaret"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="180dp"
                android:textStyle="normal"
                android:text="@string/req_indomaret"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_redeem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="170dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="270dp"
                android:backgroundTint="@color/blue"
                android:text="@string/redeem"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_alfamart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="620dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/alfamart_img"
                android:layout_width="380dp"
                android:layout_height="165dp"
                android:src="@drawable/alfamart" />

            <TextView
                android:id="@+id/vcr_alfamart"
                android:layout_width="380dp"
                android:layout_height="65dp"
                android:layout_marginTop="100dp"
                android:background="@color/blue"
                android:gravity="center_vertical"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:alpha="0.9"
                android:text="@string/vcr_alfamart"
                android:textColorHint="@color/black"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/req_alfamart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="180dp"
                android:textStyle="normal"
                android:text="@string/req_alfamart"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_redeem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="170dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="270dp"
                android:backgroundTint="@color/blue"
                android:text="@string/redeem"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</ScrollView>